# ppcx-collapses

./: .gitignore  collapses.ipynb  collapses_sandbox.ipynb  config.yaml  create_collapse_table.sql  dummy.py  import_collapses_to_db.ipynb  import_collapses_to_db.py  main.py  make_collapses_plots.py  pyproject.toml  read_collapses.ipynb  utils.py
src/ppcollapse/: __init__.py
src/ppcollapse/utils/: config.py  database.py
