[project]
name = "ppcollapse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cmcrameri>=1.9",
    "exifread>=3.5.1",
    "fiona>=1.10.1",
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "ipympl>=0.9.7",
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pyqt5>=5.15.11",
    "requests>=2.32.5",
    "ruff>=0.13.3",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.43",
    "tqdm>=4.67.1",
]
